added support for buttons

--- a/about.html
+++ b/about.html
@@ -21,88 +21,47 @@
 </head>
 
 <body>
-
-   <!-- <div class="container-fluid">
-      <div class="navbar-header">
-        <nav class="navbar navbar-default navbar-fixed-top" id="pit">
-        </span>
-        <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">
-          <h>GAME CITY
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Games <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li> <a class="dropdown-item" href="game3.html">Angry Birds</a></li>
-              <li> <a class="dropdown-item" href="game2.html">Harry Potter</a></li>
-              <li> <a class="dropdown-item" href="game2.html">Harry Potter</a></li>
-              <li> <a class="dropdown-item" href="game1.html">Fifa 18</a></li>
-              <li> <a class="dropdown-item" href="#">Word Cross</a></li>
-              <li> <a class="dropdown-item" href="#">Subway Surfers</a></li>
-              <li> <a class="dropdown-item" href="#">Clash Royale</a></li>
-              <li> <a class="dropdown-item" href="#">Nba2K18</a></li>
-              <li> <a class="dropdown-item" href="#">8 Ball Pool</a></li>
-
-            </ul>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="#">Support</a></li>
-      </div>
-      </div>
-  </nav> -->
-
-  <!-- Navigation -->
-    <!-- <div class="container-fluid"> -->
-    <!-- <div class="navbar-header"id="kik"> -->
-       <!-- <nav class="navbar navbar-expand-md navbar-fixed-top" style="background-color: #e3f2fd;"> -->
-      <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top bg-light">
-        <div class="container-fluid"style="background-color: black; margin-left:-25px; margin-right:-100px;">
-          <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"style="width: 120px;"></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-	<span class="navbar-toggler-icon"></span>
+  <nav class="navbar navbar-expand-md navbar-light  fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+  <span class="navbar-toggler-icon"></span>
 </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive min">
-            <ul class="navbar-nav ml-auto" id="pi">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html"style="color:white; font-size:15px;">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"style="color:white; font-size:15px;">
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a id="navtext" class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Games
         </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown"style="color:white; font-size:15px;">
-                  <a class="dropdown-item" href="game3.html">Angry Birds</a>
-                  <a class="dropdown-item" href="game2.html">Harry Potter</a>
-                  <a class="dropdown-item" href="game1.html">Fifa 18</a>
-                  <a class="dropdown-item" href="#">Word Cross</a>
-                  <a class="dropdown-item" href="#">Subway Surfers</a>
-                  <a class="dropdown-item" href="#">Clash Royale</a>
-                  <a class="dropdown-item" href="#">Nba2K18</a>
-                  <a class="dropdown-item" href="#">8 Ball Pool</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="game3.html">Angry Birds</a>
+              <a class="dropdown-item" href="game2.html">Harry Potter</a>
+              <a class="dropdown-item" href="game1.html">Fifa 18</a>
+              <a class="dropdown-item" href="#">Word Cross</a>
+              <a class="dropdown-item" href="#">Subway Surfers</a>
+              <a class="dropdown-item" href="#">Clash Royale</a>
+              <a class="dropdown-item" href="#">Nba2K18</a>
+              <a class="dropdown-item" href="#">8 Ball Pool</a>
 
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html"style="color:white;  font-size:15px;">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"style="color:white;  font-size:15px;">Support</a>
-              </li>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a id="navtext" class="nav-link" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
+          </li>
 
-            </ul>
+        </ul>
 
-          </div>
-        </div>
+      </div>
     </div>
-
   </nav>
 
-  <!-- <div class="jumbotron" id="dip">
-    <background-image: url( "t.png");></div> -->
+
   <h1 id="komo">WHO WE ARE</h1>
   <!-- <div class="container"> -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
