--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 				<div class="col-md-6">
 					<div class="jumbotron">
 						<h2>Report a problem</h2>
-						<form id="complaint">
+						<!-- <form id="complaint" method="POST" action="https://formspree.io/tonykanyingah@gmail.com">
 							<div class="form-group">
 								<label for="Your Name">Your Name</label>
 								<input style="width:60%;" type="text" class="form-control" id="name" placeholder="Name">
@@ -207,7 +207,25 @@
 								<input style="width:60%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
 							</div>
 							<button id="submit" type="submit" class="btn btn-success">Submit</button>
-						</form>
+						</form> -->
+						<form id="complaint" class="form" method="POST" action="https://formspree.io/cherucole94@gmail.com">
+							<div class="form-group">
+								<label for=".form-control">Email</label>
+									<input style="width:60%;" type="email" class="form-control" name="_replyto" placeholder="Email Address" required />
+								<label for="fname">Your Name</label>
+								<input style="width:60%;" class="form-control" type="text" id="fname" name="firstname" placeholder="Your name..">
+								<label for="subject">Subject</label>
+								<textarea style="width:60%;" id="subject" class="form-control" name="subject" placeholder="Write something.." ></textarea>
+<br>
+								<input class="btn btn-success" type="submit" value="Submit">
+							</div>
+
+
+            </form>
+
+
+
+
 					</div>
 				</div>
 
