formatting about page

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 <head>
 
   <title>Gaming landing page</title>
+  <link rel="icon" href="img/title.png" type="image/x-icon">
+
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -112,10 +114,19 @@
   </div>
   <div class="container">
     <!-- <div class="col-md-8"> -->
-    <h4><strong>ABOUT</strong></h4>
-    <p id="mike">Game City is a global leader in mobile entertainment, providing social gaming experiences for millions of players around the world. Game City is the creative powerhouse behind some of the highest grossing and most enduring social gaming franchises
-      for mobile, including Cookie Jam (a Facebook “Game of the Year” winner) and Pand.Game City is the go-to studio for Hollywood, having developed immersive narrative-rich mobile games for iconic entertainment brands including Harry Potter and Family
-      Guy Game City’s diverse and multi-faceted team is known for its creative excellence and technological innovation in areas including storytelling, data science and consumer insights.</p>
+    <h4 style="color:white"><strong>ABOUT</strong></h4>
+    <hr style="color:white" class="light">
+
+    <p id="mike">GameCity offers a comprehensive platform where app developers of all sizes can connect with their ideal consumers and get discovered. Founded in 2018, the company is focused on helping both indie and established developers grow, with the expertise and insights they need to finance, market, and expand their businesses – all in one place. App developers view GameCity as a trusted partner, the rare company that understands what it takes to succeed in the mobile app ecosystem and has the ability to help them reach their goals. </p>
+    <br>
+    <h1>Ours Services include:</h1>
+    <ol>
+      <li id="mike" >Use data to reach new consumers on mobile</li>
+      <li id="mike" >Marketing platform grows your reach to acquire new customers</li>
+      <li id="mike" >Consumer actions give you data, so you can adapt your strategy</li>
+      <li id="mike" >Access to a large database of mobile users</li>
+
+    </ol>
   </div>
   <!-- </div> -->
 
@@ -129,9 +140,12 @@
         <img class="card-img-top" src="img/ki.png" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Collins</h4>
-          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+          <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <div class="card-footer">
+        <a href="github.com">
+          <button type="button" name="button" class="btn btn-success">Github Profile</button>
+        </a>
+        <!-- <div class="card-footer">
           <div style="">
             <a href="#"><i class="fa fa-github"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -139,15 +153,18 @@
             <a href="#"><i class="fa fa-facebook"></i></a>
           </div>
           <small class="text-muted"></small>
-        </div>
+        </div> -->
       </div>
       <div class="card">
         <img class="card-img-top" src="img/ki.png" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Mike</h4>
-          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+          <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <div class="card-footer">
+        <a href="github.com">
+          <button type="button" name="button" class="btn btn-success">Github Profile</button>
+        </a>
+        <!-- <div class="card-footer">
           <div style="">
             <a href="#"><i class="fa fa-github"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -155,55 +172,89 @@
             <a href="#"><i class="fa fa-facebook"></i></a>
           </div>
           <small class="text-muted"></small>
-        </div>
+        </div> -->
       </div>
       <div class="card">
         <img class="card-img-top" src="img/tom.png" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Tonny</h4>
-          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+          <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <div class="card-footer">
+        <a href="github.com">
+          <button type="button" name="button" class="btn btn-success">Github Profile</button>
+        </a>
+        <!-- <div class="card-footer">
           <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
+        </div> -->
       </div>
       <div class="card">
         <img class="card-img-top" src="img/ki.png" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Kioko</h4>
-          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+          <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <div class="card-footer">
+        <a href="github.com">
+          <button type="button" name="button" class="btn btn-success">Github Profile</button>
+        </a>
+        <!-- <div class="card-footer">
           <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
+        </div> -->
       </div>
       <div class="card">
         <img class="card-img-top" src="img/tom.png" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Tom</h4>
-          <p class="card-text">Moringa Prep Web Dev with 4 weeks experience.</p>
+          <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <div class="card-footer">
+        <a href="github.com">
+          <button type="button" name="button" class="btn btn-success">Github Profile</button>
+        </a>
+        <!-- <div class="card-footer">
           <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
-  <div class="jumbotron" id="lip">
-    <h6 id="komo">GAMECITY</h6>
-    <h id="sik">YOU CAN FIND US ON :</h>
+  <footer>
+    <div class="container-fluid padding">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <img src="img/logo.png">
+          <hr class="light">
+          <p>555-555-55555</p>
+          <p>gamecity@gmail.com</p>
+          <p>100 Nairobi</p>
+          <p>Ngong, Nairobi, 001000</p>
 
-    <div col-ms-12 id="cup">
-      <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"id="dzp"></i></a>
-      <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"id="dip"></i></a>
-      <a href="https://www.amazon.com" target="_blank">  <i class="fab fa-amazon"id="dip"></i></a>
-      <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"id="nit"></i></a>
-      <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"id="vip"></i></a>
-      <a href="https://www.apple.com" target="_blank"><i class="fab fa-apple"id="git"></i></a>
-      <p id="sit">© 2018 Game City, Inc. Game CITY® and the Game CITY Logo are registered and/or <br>unregistered trademarks of Game City, Inc. | Privacy Policy | Terms Of Service</p>
+        </div>
+        <div class="col-md-4">
+          <hr class="light">
+          <h5>Our Partners</h5>
+          <hr class="light">
+          <p>Google Playstore</p>
+          <p>Apple Appstore</p>
+          <p>Windows Phone Store</p>
+
+        </div>
+        <div class="col-md-4">
+          <hr class="light">
+          <h5>Supported Platforms</h5>
+          <hr class="light">
+          <p>Android</p>
+          <p>iOS</p>
+          <p>Windows Phone</p>
+          <p>Blackberry</p>
+
+        </div>
+        <div class="col-12">
+          <hr class="light-100">
+          <h5>&copy; cherucole</h5>
+
+        </div>
+      </div>
+
     </div>
-  </div>
+  </footer>
   </div>
 
 </body>
