--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Games
         </a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<div class="dropdown-menu names" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="game3.html">Angry Birds</a>
 							<a class="dropdown-item" href="game2.html">Harry Potter</a>
 							<a class="dropdown-item" href="game1.html">Fifa 18</a>
