formatted about us

--- a/about.html
+++ b/about.html
@@ -114,12 +114,15 @@
   </div>
   <div class="container">
     <!-- <div class="col-md-8"> -->
+    <br>
     <h4 style="color:white"><strong>ABOUT</strong></h4>
-    <hr style="color:white" class="light">
+    <hr style="width:100%;" class="light">
 
     <p id="mike">GameCity offers a comprehensive platform where app developers of all sizes can connect with their ideal consumers and get discovered. Founded in 2018, the company is focused on helping both indie and established developers grow, with the expertise and insights they need to finance, market, and expand their businesses – all in one place. App developers view GameCity as a trusted partner, the rare company that understands what it takes to succeed in the mobile app ecosystem and has the ability to help them reach their goals. </p>
     <br>
-    <h1>Ours Services include:</h1>
+    <h1 style="text-align:center;">Ours Services include:</h1>
+    <hr style="width:100%;" class="light">
+
     <ol>
       <li id="mike" >Use data to reach new consumers on mobile</li>
       <li id="mike" >Marketing platform grows your reach to acquire new customers</li>
@@ -132,8 +135,8 @@
 
   <br><br><br>
   <div class="container">
-    <h2>Profile Group</h2>
-
+    <h2>TEAM PROFILES</h2>
+    <hr style="width:100%;" class="light">
 
     <div class="card-deck">
       <div class="card">
@@ -214,7 +217,10 @@
         </div> -->
       </div>
     </div>
+
   </div>
+  <br>
+  <br>
   <footer>
     <div class="container-fluid padding">
       <div class="row text-center">
@@ -229,7 +235,7 @@
         </div>
         <div class="col-md-4">
           <hr class="light">
-          <h5>Our Partners</h5>
+          <h5 style="font-size:18px;">Our Partners</h5>
           <hr class="light">
           <p>Google Playstore</p>
           <p>Apple Appstore</p>
@@ -238,7 +244,7 @@
         </div>
         <div class="col-md-4">
           <hr class="light">
-          <h5>Supported Platforms</h5>
+          <h5 style="font-size:18px;">Supported Platforms</h5>
           <hr class="light">
           <p>Android</p>
           <p>iOS</p>
