--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
@@ -66,50 +66,38 @@
 
   <h1 id="komo">WHO WE ARE</h1>
   <!-- <div class="container"> -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
 
-        <div class="item active">
-          <img src="img/w.jpeg" alt="Los Angeles" style="width:100%;" id="pik">
-          <div class="carousel-caption">
-            <h3>GAME CITY</h3>
-            <p>GAME CITY DEVELOPERS</p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="img/w.jpeg" alt="Chicago" style="width:100%;" id="pik">
-          <div class="carousel-caption">
-            <h3>GAME CITY</h3>
-            <p>GAME CITY DEVELOPERS</p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="img/w.jpeg" alt="New York" style="width:100%;" id="pik">
-          <div class="carousel-caption">
-            <h3> GAME CITY</h3>
-            <p>GAME CITY DEVELOPERS</p>
-          </div>
+      <div class="item active">
+        <img src="img/team.jpeg" alt="Los Angeles" style="width:100%; height:400px;">
+        <div class="carousel-caption">
+          <h3 style="font-size:40px;">GAME CITY TEAM</h3>
         </div>
       </div>
 
+      <div class="item">
+        <img src="img/team.jpeg" alt="Los Angeles" style="width:100%; height:400px;">
+        <div class="carousel-caption">
+          <h3 style="font-size:40px;">GAME CITY TEAM</h3>
+        </div>
+      </div>
 
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
     </div>
-  <!-- </div> -->
+    <!-- </div> -->
 
   </div>
   <div class="container">
@@ -118,16 +106,18 @@
     <h4 style="color:white"><strong>ABOUT</strong></h4>
     <hr style="width:100%;" class="light">
 
-    <p id="mike">GameCity offers a comprehensive platform where app developers of all sizes can connect with their ideal consumers and get discovered. Founded in 2018, the company is focused on helping both indie and established developers grow, with the expertise and insights they need to finance, market, and expand their businesses – all in one place. App developers view GameCity as a trusted partner, the rare company that understands what it takes to succeed in the mobile app ecosystem and has the ability to help them reach their goals. </p>
+    <p id="mike">GameCity offers a comprehensive platform where app developers of all sizes can connect with their ideal consumers and get discovered. Founded in 2018, the company is focused on helping indie game developers grow, with the expertise
+      and insights they need to finance, market, and expand their businesses – all in one place. App developers view GameCity as a trusted partner, the rare company that understands what it takes to succeed in the mobile app ecosystem and has the ability
+      to help them reach their goals. </p>
     <br>
     <h1 style="text-align:center;">Ours Services include:</h1>
     <hr style="width:100%;" class="light">
 
     <ol>
-      <li id="mike" >Use data to reach new consumers on mobile</li>
-      <li id="mike" >Marketing platform grows your reach to acquire new customers</li>
-      <li id="mike" >Consumer actions give you data, so you can adapt your strategy</li>
-      <li id="mike" >Access to a large database of mobile users</li>
+      <li id="mike">Use data to reach new consumers on mobile</li>
+      <li id="mike">Marketing platform grows your reach to acquire new customers</li>
+      <li id="mike">Consumer actions give you data, so you can adapt your strategy</li>
+      <li id="mike">Access to a large database of mobile users</li>
 
     </ol>
   </div>
@@ -148,15 +138,7 @@
         <a href="github.com">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
-        <!-- <div class="card-footer">
-          <div style="">
-            <a href="#"><i class="fa fa-github"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-          </div>
-          <small class="text-muted"></small>
-        </div> -->
+
       </div>
       <div class="card">
         <img class="card-img-top" src="img/ki.png" alt="Card image cap">
@@ -167,15 +149,7 @@
         <a href="github.com">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
-        <!-- <div class="card-footer">
-          <div style="">
-            <a href="#"><i class="fa fa-github"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-facebook"></i></a>
-          </div>
-          <small class="text-muted"></small>
-        </div> -->
+
       </div>
       <div class="card">
         <img class="card-img-top" src="img/tom.png" alt="Card image cap">
@@ -186,9 +160,7 @@
         <a href="github.com">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
-        <!-- <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div> -->
+
       </div>
       <div class="card">
         <img class="card-img-top" src="img/ki.png" alt="Card image cap">
@@ -199,9 +171,7 @@
         <a href="github.com">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
-        <!-- <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div> -->
+
       </div>
       <div class="card">
         <img class="card-img-top" src="img/tom.png" alt="Card image cap">
@@ -212,9 +182,7 @@
         <a href="github.com">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
-        <!-- <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div> -->
+
       </div>
     </div>
 
