--- a/about.html
+++ b/about.html
@@ -71,16 +71,15 @@
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner">
-
-      <div class="item active">
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
         <img src="img/team.jpeg" alt="Los Angeles" style="width:100%; height:400px;">
         <div class="carousel-caption">
           <h3 style="font-size:40px;">GAME CITY TEAM</h3>
         </div>
       </div>
 
-      <div class="item">
+      <div class="carousel-item">
         <img src="img/team.jpeg" alt="Los Angeles" style="width:100%; height:400px;">
         <div class="carousel-caption">
           <h3 style="font-size:40px;">GAME CITY TEAM</h3>
