--- a/about.html
+++ b/about.html
@@ -6,9 +6,7 @@
   <title>Gaming landing page</title>
   <link rel="icon" href="img/title.png" type="image/x-icon">
 
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -23,44 +21,44 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-light  fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-  <span class="navbar-toggler-icon"></span>
+		<div class="container-fluid">
+			<a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+	<span class="navbar-toggler-icon"></span>
 </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a id="navtext" class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a id="navtext" class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Games
         </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="game3.html">Angry Birds</a>
-              <a class="dropdown-item" href="game2.html">Harry Potter</a>
-              <a class="dropdown-item" href="game1.html">Fifa 18</a>
-              <a class="dropdown-item" href="#">Word Cross</a>
-              <a class="dropdown-item" href="#">Subway Surfers</a>
-              <a class="dropdown-item" href="#">Clash Royale</a>
-              <a class="dropdown-item" href="#">Nba2K18</a>
-              <a class="dropdown-item" href="#">8 Ball Pool</a>
+						<div class="dropdown-menu names" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="game3.html">Angry Birds</a>
+							<a class="dropdown-item" href="game2.html">Harry Potter</a>
+							<a class="dropdown-item" href="game1.html">Fifa 18</a>
+							<a class="dropdown-item" href="#">Word Cross</a>
+							<a class="dropdown-item" href="#">Subway Surfers</a>
+							<a class="dropdown-item" href="#">Clash Royale</a>
+							<a class="dropdown-item" href="#">Nba2K18</a>
+							<a class="dropdown-item" href="#">8 Ball Pool</a>
 
-            </div>
-          </li>
-          <li class="nav-item">
-            <a id="navtext" class="nav-link" href="about.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
-          </li>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a id="navtext" class="nav-link" href="about.html">About Us</a>
+					</li>
+					<li class="nav-item">
+						<a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
+					</li>
 
-        </ul>
+				</ul>
 
-      </div>
-    </div>
-  </nav>
+			</div>
+		</div>
+	</nav>
 
 
   <!-- <div class="container"> -->
