--- a/about.html
+++ b/about.html
@@ -125,56 +125,56 @@
 
     <div class="card-deck">
       <div class="card">
-        <img class="card-img-top" src="img/ki.png" alt="Card image cap">
+        <img id="cardimg" class="card-img-top" src="img/collo.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Collins</h4>
           <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <a href="github.com">
+        <a href="https://github.com/cherucole">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
 
       </div>
       <div class="card">
-        <img class="card-img-top" src="img/ki.png" alt="Card image cap">
+        <img id="cardimg" class="card-img-top" src="img/collo.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Mike</h4>
           <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <a href="github.com">
+        <a href="https://github.com/kinuthi">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
 
       </div>
       <div class="card">
-        <img class="card-img-top" src="img/tom.png" alt="Card image cap">
+        <img id="cardimg" class="card-img-top" src="img/collo.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Tonny</h4>
           <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <a href="github.com">
+        <a href="https://github.com/tonnymuchui">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
 
       </div>
       <div class="card">
-        <img class="card-img-top" src="img/ki.png" alt="Card image cap">
+        <img id="cardimg" class="card-img-top" src="img/collo.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Kioko</h4>
           <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <a href="github.com">
+        <a href="https://github.com/TonyKioko">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
 
       </div>
       <div class="card">
-        <img class="card-img-top" src="img/tom.png" alt="Card image cap">
+        <img id="cardimg" class="card-img-top" src="img/collo.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Tom</h4>
           <h3 id="desc" class="card-text">Moringa Prep Web Dev with 4 weeks experience.</h3>
         </div>
-        <a href="github.com">
+        <a href="https://github.com/emdeechege">
           <button type="button" name="button" class="btn btn-success">Github Profile</button>
         </a>
 
@@ -217,7 +217,7 @@
         </div>
         <div class="col-12">
           <hr class="light-100">
-          <h5>&copy; cherucole</h5>
+          <h5>&copy; mike</h5>
 
         </div>
       </div>
