formatting fifa body

--- a/game1.html
+++ b/game1.html
@@ -60,17 +60,21 @@
         </div>
       </div>
     </nav>
-    <div class="jumbotron" style="margin-bottom: 2px;margin-top: -13px;">
+    <br>
+    <div   style="margin-bottom: 2px;margin-top: -13px;">
       <div class="net">
         <div class="about">
           <h1>A New FIFA-18 Mobile Game</h1>
         </div>
-        <p class="pg">
+        <!-- <p class="pg">
           The 2018 FIFA World Cup™ has arrived to FIFA Mobile! If you’re new to FIFA Mobile, start building and managing your team with Cristiano Ronaldo as the star. Then train any player to superstar status, attack opponents, and keep coming back for daily content
           all season long. Whether you’re a savvy veteran, just starting out on the pitch, or ready for FIFA World Cup™ competition, FIFA Mobile is your source for soccer.
-        </p>
+        </p> -->
+        <br>
+        <br>
       </div>
     </div>
+    <br>
     <div class="ba">
       <div class="container-fluid">
         <div id="demo" class="carousel slide" data-ride="carousel">
@@ -129,14 +133,16 @@
       <div class="blak">
         <div class="container-fluid">
           <h1 class="about">Game Features</h1>
+          <hr style="width:100%;" class="light">
+<br>
           <div class="row" style="margin-top: -36px;margin-bottom: 223px;">
             <div class="col-md-6" id="img">
               <a href=""><img src="img/fifa5.jpeg" alt="RUSSIA"></a>
             </div>
             <div class="col-md-6">
-              <h1 class="about">EXPERIENCE THE 2018 FIFA WORLD CUP™ RUSSIA</h1>
+              <!-- <h1 class="about">EXPERIENCE THE 2018 FIFA WORLD CUP™ RUSSIA</h1> -->
               <p class="pg">
-                The 2018 FIFA World Cup™ Russia is here!
+                <!-- The 2018 FIFA World Cup™ Russia is here! -->
                 <ul class="pg">
                   <li>Play through unique modes and maps</li>
                   <li>Play as any of the 32 qualifying countries, and test your national team</li>
@@ -147,7 +153,8 @@
           </div>
         </div>
       </div>
-      <br>
+      <hr style="width:100%;" class="light">
+<br>
       <div class="container-fluid">
         <div class="row" style="margin-top: -36px;margin-bottom: -1px;">
           <div class="col-md-6">
@@ -165,6 +172,8 @@
           </div>
         </div>
       </div>
+      <hr style="width:100%;" class="light">
+
       <br>
       <div class="container-fluid">
         <div class="row" style="margin-top: -36px;margin-bottom: -1px;">
@@ -184,15 +193,28 @@
         </div>
       </div>
     </div>
+    <hr style="width:100%;" class="light">
+
     <div class="container-fluid">
-      <div class="well" style="margin-top: 2px;">
-        <h1 class="about">FOLLOW us;</h1>
-        <div id="cup">
-          <a href="https://www.facebook.com/FIFA18EA/" class="fab fa-facebook"></a>
-          <a href="https://www.instagram.com/worldcup2018tv/" class="fab fa-instagram"></a>
+      <div class="container-fluid padding">
+        <div class="row text-center padding">
+          <div class="col-12">
+            <h3>Connect with us</h3>
+          </div>
+          <div class="col-12 social padding">
+            <hr class="light">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/cherucole"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <hr class="light">
+
+
+          </div>
         </div>
+
       </div>
-    </div>
     <!--- Footer -->
     <footer>
       <div class="container-fluid padding">
